--- a/views/home.jade
+++ b/views/home.jade
@@ -1,4 +1,4 @@
-b You can find more information here:
+h3 You can find more information here:
 p
   ul
     li 
@@ -7,6 +7,20 @@ p
       a(href:"http://blog.heroku.com/archives/2011/5/31/celadon_cedar/") http://blog.heroku.com/archives/2011/5/31/celadon_cedar/
     li 
       a(href:"http://devcenter.heroku.com/") http://devcenter.heroku.com/
+
+h3 Example App Info
+p In this example I'm using:
+p
+  ul
+    li Jade
+    li Stylus
+    li And of course ExpressJS
+
+p This example took me less than 10 minutes to build and deploy to Heroku, no FUCKING JOKE!
+
+p You can download here
+ a(href:"https://github.com/csanz/node-example") https://github.com/csanz/node-example
+
 br
 dev#references I'll do a quick video soon 
   a(href:"http://twitter.com/csanz") @csanz
