--- a/views/home.jade
+++ b/views/home.jade
@@ -11,9 +11,12 @@ h3 Example App Info
 p In this example I'm using:
 p
   ul
-    li Jade
-    li Stylus
-    li And of course ExpressJS
+    li 
+      a(href:"http://jade-lang.com/") Jade
+    li 
+      a(href:"https://github.com/LearnBoost/stylus") Stylus
+    li 
+      a(href:"http://expressjs.com/") And of course ExpressJS
 p This example took me less than 10 minutes to build and deploy to Heroku, no FUCKING JOKE!
 p You can download here
   a(href:"https://github.com/csanz/node-example") https://github.com/csanz/node-example
