added code snippet

--- a/views/home.jade
+++ b/views/home.jade
@@ -23,3 +23,8 @@ p You can download here
 br
 dev#references I'll do a quick video soon 
   a(href:"http://twitter.com/csanz") @csanz
+br
+br
+h3 Quick preview of the code
+div(style:"width:600px")
+  script(src:"https://gist.github.com/1001138.js?file=web.js")
